minor changes in strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="TeamB">PAKISTAN</string>
     <string name="teamAGoal">3</string>
     <string name="TeamBGoal">4</string>
-    <string name="team_a">TEAM A</string>
+    <string name="team_a">TEAM INDIA </string>
     <string name="savedata">Do you want to save Data ?</string>
-    <string name="team_2">TEAM B</string>
+    <string name="team_2">TEAM PAKISTAN</string>
     <string name="title">Hockey World Cup Final Match</string>
     <string name="add_goal">+ Goal</string>
     <string name="minus_goal">- Minus Goal</string>
